[package]
name = "bitcoin-cash-base"
version = "0.1.3"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Base library for the bitcoin-cash library"
homepage = "https://github.com/be-cash/bitcoin-cash"
documentation = "https://github.com/be-cash/bitcoin-cash"
repository = "https://github.com/be-cash/bitcoin-cash"


[dependencies]
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
byteorder = "1.3"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
sha2 = "0.8"
bitcoin-cash = {path="../bitcoin-cash"}
hex-literal = "0.2"
