[package]
name = "bitcoin-cash-base"
version = "0.2.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Base library for the bitcoin-cash library"
homepage = "https://github.com/be-cash/bitcoin-cash"
documentation = "https://github.com/be-cash/bitcoin-cash"
repository = "https://github.com/be-cash/bitcoin-cash"


[dependencies]
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
byteorder = "1.3"
hex = "0.4"
serde = {version="1.0", features=["derive"]}
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"

[dev-dependencies]
sha2 = "0.9"
bitcoin-cash = {path="../bitcoin-cash", version="0"}
hex-literal = "0.3"
