[package]
name = "bitcoin-cash-script-macro"
version = "0.1.2"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A procedual macro to ease writing bitcoin cash scripts, base library for the bitcoin-cash library"
homepage = "https://github.com/be-cash/bitcoin-cash"
documentation = "https://github.com/be-cash/bitcoin-cash"
repository = "https://github.com/be-cash/bitcoin-cash"

[lib]
proc-macro = true

[dependencies]
bitcoin-cash-base = {path="../bitcoin-cash-base", version="0.1.2"}

syn = {version="1.0", features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
toolchain_find = "0.1"
tempfile = "3.1"
regex = "1.3"

[dev-dependencies]
bitcoin-cash = {path="../bitcoin-cash"}
pretty_assertions = "0.6"
