[package]
name = "bitcoin-cash-script"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
