[package]
name = "bitcoin-cash-script"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
byteorder = "1.3"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
sha2 = "0.8"
bitcoin-cash = {path="../bitcoin-cash"}
hex-literal = "0.2"
