[package]
name = "bitcoin-cash-slp"
version = "0.3.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for creating SLP transactions"
homepage = "https://github.com/be-cash/bitcoin-cash"
documentation = "https://github.com/be-cash/bitcoin-cash"
repository = "https://github.com/be-cash/bitcoin-cash"

[dependencies]
bitcoin-cash = "0.2.1"
