[package]
name = "bitcoin-cash"
version = "0.1.3"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for creating and parsing Bitcoin Cash trasactions"
homepage = "https://github.com/be-cash/bitcoin-cash"
documentation = "https://github.com/be-cash/bitcoin-cash"
repository = "https://github.com/be-cash/bitcoin-cash"

[dependencies]
bitcoin-cash-script-macro = {path="../bitcoin-cash-script-macro", version="0.1.3"}
bitcoin-cash-base = {path="../bitcoin-cash-base", version="0.1.3"}

hex = "0.4"
hex-literal = "0.3"
error-chain = "0.12"
sha-1 = "0.9"
ripemd160 = "0.9"
sha2 = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.3"
bitflags = "1.2"
base64 = "0.12"
bimap = "0.5"

num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
